# circuit-digitization

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
api/configuration/: index.html
api/endpoints/: index.html
architecture/: index.html
cli/: index.html
deployment/: index.html
development/: index.html
docs/: data-quality.md  datasets.md  experiment.md
docs/experiments/data/: cghd_final_audit.json  cghd_quality_sweep.json  cghd_reclassified.json  cghd_vlm_results.json  cghd_vlm_retry.json  cghd_vlm_samples.json
evaluate/: index.html
experiment/: index.html
getting-started/: index.html
pipeline/backends/: index.html
pipeline/overview/: index.html
pipeline/stages/: index.html
sdg/: index.html
search/: search_index.json
ui/src/app/: page.tsx
wire_detection/api/: server.py
wire_detection/benchmark/: experiment_harness.py  reference_pipeline.py
wire_detection/config/: datasets.yaml
wire_detection/data/: dataset.py
wire_detection/experiment/: sweep.py
wire_detection/pipeline/: cli.py
wire_detection/pipeline/stages/: __init__.py  close_merge.py  dilate.py  normalize.py  threshold.py
wire_detection/sdg/: __init__.py  backgrounds.py  generator.py  primitives.py  textures.py
wire_detection/tests/: test_benchmark_experiment.py  test_sdg.py
